<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_background"
    tools:context="movieapp.mina.com.themoviedbapp.screens.filter.FilterActivity">

    <TextView
        android:id="@+id/filter_by_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/filter_by"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Headline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="@+id/filter_by_text_view"
        app:layout_constraintTop_toBottomOf="@+id/filter_by_text_view">
        <RadioButton
            android:id="@+id/this_year_radio_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/this_year"
            android:layout_marginTop="8dp"
            android:tag="0"
            android:onClick="onRadioButtonClicked"/>

        <RadioButton
            android:id="@+id/two_years_radio_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/two_years"
            android:layout_marginTop="8dp"
            android:tag="2"
            android:onClick="onRadioButtonClicked"/>

        <RadioButton
            android:id="@+id/ten_years_radio_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ten_years"
            android:layout_marginTop="8dp"
            android:tag="10"
            android:onClick="onRadioButtonClicked"/>
    </RadioGroup>


    <android.support.v7.widget.AppCompatButton
        android:id="@+id/filter_button"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginBottom="8dp"
        android:text="@string/filter_button_text"
        android:textColor="@color/icons"
        android:background="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/clear_button"
        app:layout_constraintTop_toBottomOf="@+id/radio_group" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/clear_button"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginBottom="8dp"
        android:text="@string/clear_button_text"
        android:textColor="@color/icons"
        android:background="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/filter_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radio_group" />
</android.support.constraint.ConstraintLayout>
