<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_background"
    tools:context="movieapp.mina.com.themoviedbapp.screens.details.DetailsActivity">

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/error_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="16dp"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/error_movie_not_found" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/reload_button"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/reload"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/error_text_view" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/movie_details_layout"
            android:visibility="gone"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/movie_poster_image_view"
                android:layout_width="185dp"
                android:layout_height="150dp"
                android:scaleType="fitXY"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_video_camera" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/movie_title_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Headline"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/movie_poster_image_view"
                tools:text="Movie Title Here" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/movie_release_date_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
                app:layout_constraintStart_toStartOf="@+id/movie_title_text_view"
                app:layout_constraintTop_toBottomOf="@+id/movie_title_text_view"
                tools:text="30 June 2015" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/movie_vote_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="4dp"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
                app:layout_constraintEnd_toStartOf="@+id/movie_vote_count_text_view"
                app:layout_constraintTop_toBottomOf="@+id/movie_title_text_view"
                tools:text="8/10" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/movie_vote_count_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/movie_title_text_view"
                tools:text="(1000)" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/movie_genre_label_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
                app:layout_constraintStart_toStartOf="@+id/movie_release_date_text_view"
                app:layout_constraintTop_toBottomOf="@+id/movie_release_date_text_view"
                android:text="@string/genre_label" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/movie_genre_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
                app:layout_constraintStart_toEndOf="@+id/movie_genre_label_text_view"
                app:layout_constraintTop_toTopOf="@+id/movie_genre_label_text_view"
                tools:text="Adventure, Drama" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/movie_overview_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/movie_genre_label_text_view"
                tools:text="Movie overview here" />
        </android.support.constraint.ConstraintLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>